--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.19.0",
     "react-icons": "^4.3.1",
+    "react-query": "^3.32.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.9",
     "@types/node": "^16.10.3",
     "@types/react": "^17.0.27",
     "eslint": "8.0.0",
     "eslint-config-next": "11.1.2",
+    "faker": "^5.5.3",
+    "miragejs": "^0.1.42",
     "typescript": "^4.4.3"
   }
 }
